# danki

./: .pre-commit-config.yaml  Makefile  danki.py  dev-requirements.txt  pyproject.toml
